# tremolisto

./: .gitignore  README.md  audio.py  cache.py  extractor.py  flake.nix  justfile  models.py  netlify.toml  pyproject.toml  requirements.in  requirements.txt  yt.py
.github/: dependabot.yml
.github/workflows/: python-ci.yml  ui-ci.yml  update-flake-lock.yml
app/: build.py  build_html.py  main.py
templates/: app.html
ui/: .gitignore  Cargo.toml  README.md  eslint.config.mjs  index.html  justfile  music.json  package-lock.json  package.json  tailwind.config.js  test-music.json  test-sound.txt
ui/src/: app.css  app.html  data.rs  lib.rs  main.rs
ui/src/lib/: types.ts
ui/src/routes/: +layout.svelte  +page.svelte
