[project]
name = "tremolisto"
version = "0.1.0"
description = "a collection of isolated guitar parts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "pydantic~=2.11",
    "pydub~=0.25",
    "python-dotenv~=1.1",
    "tqdm~=4.67",
    "yt-dlp~=2026.1",
]

classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
